--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "sass": "^1.45.1",
     "sass-loader": "^10.2.0"
