--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@nuxt/image": "^0.6.0",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "sass": "^1.45.1",
