--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/image": "^0.6.0",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/svg": "^0.4.0",
     "sass": "^1.45.1",
     "sass-loader": "^10.2.0"
   }
