--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "unpack": "node bin/unzip-prototypes.js"
+    "unpack": "node bin/unzip-prototypes.js",
+    "locales-check": "node bin/locales-parity.js"
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.2.0",
